<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- portrait  layout -->

    <ImageView
        android:layout_width="128dp"
        android:layout_height="51dp"
        android:layout_marginLeft="@dimen/auto_complete_ed_margin_left"
        android:layout_marginRight="@dimen/auto_complete_ed_margin_right"
        android:layout_marginTop="@dimen/openthos_view_size_20"
        android:src="@drawable/openthos_about_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/auto_complete_ed_margin_left"
        android:layout_marginRight="@dimen/auto_complete_ed_margin_right"
        android:layout_marginTop="@dimen/openthos_view_size_30"
        android:textSize="@dimen/openthos_view_size_16"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/openthos_view_size_20"
        android:paddingBottom="@dimen/form_padding_bottom"
        android:paddingTop="@dimen/form_padding_top">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/server_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/server_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/et_margin_bottom"
                android:layout_marginLeft="@dimen/et_margin_left"
                android:layout_marginRight="@dimen/et_margin_right"
                android:hint="@string/server_hint"
                android:inputType="textUri"
                android:textSize="@dimen/et_txt_size" />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.seafile.seadroid2.ui.EmailAutoCompleteTextView
                    android:id="@+id/email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/et_margin_bottom"
                    android:layout_marginLeft="@dimen/auto_complete_ed_margin_left"
                    android:layout_marginRight="@dimen/auto_complete_ed_margin_right"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iv_delete_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_larger"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/icon_delete"
                android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/et_margin_bottom"
                    android:layout_marginLeft="@dimen/auto_complete_ed_margin_left"
                    android:layout_marginRight="@dimen/auto_complete_ed_margin_right"
                    android:fontFamily="sans-serif"
                    android:hint="@string/passwd_hint"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/iv_delete_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/rl_layout_eye"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/icon_delete"
                android:visibility="invisible" />

            <RelativeLayout
                android:id="@+id/rl_layout_eye"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_larger"
                android:background="@color/transparent"
                android:paddingRight="@dimen/padding_normal">

                <ImageView
                    android:id="@+id/iv_eye_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/padding_small"
                    android:src="@drawable/icon_eye_close" />
            </RelativeLayout>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_token_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/auth_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/two_factor_auth_token"
                android:inputType="number"
                android:layout_marginBottom="@dimen/et_margin_bottom"
                android:layout_marginLeft="@dimen/auto_complete_ed_margin_left"
                android:layout_marginRight="@dimen/auto_complete_ed_margin_right" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <CheckBox
        android:id="@+id/remember_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/auto_complete_ed_margin_left"
        android:layout_marginRight="@dimen/auto_complete_ed_margin_left"
        android:text="@string/two_factor_auth_remember_phone"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="center"
        android:layout_marginTop="@dimen/openthos_view_size_20"
        android:layout_marginRight="@dimen/long_btn_margin_right"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/long_btn_txt_size" />

    <TextView
        android:id="@+id/fotgot_password_view"
        android:onClick="fotgotPasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/fancy_purple"
        android:textSize="@dimen/openthos_view_size_12"
        android:layout_marginTop="@dimen/openthos_view_size_6"
        android:layout_marginRight="@dimen/long_btn_margin_right"
        android:text="@string/lockscreen_access_pattern_passwd_forget" />
    <RelativeLayout
        android:id="@+id/log_in_erro_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_margin_left"
        android:layout_marginRight="@dimen/tv_margin_right"
        android:layout_marginTop="@dimen/openthos_view_size_20"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/status_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    </RelativeLayout>

    <TextView
        android:id="@+id/seahub_url_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tv_margin_left"
        android:layout_marginRight="@dimen/tv_margin_right"
        android:visibility="gone"
        android:textSize="@dimen/tv_txt_size"
        android:text="@string/seahub_url_hint"/>

</LinearLayout>